--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ edition = "2018"
 dirs = "2.0.2"
 glob = "0.3.0"
 lz4 = "1.23.1"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
