--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,15 @@
 [package]
 name = "firefox-all-open-urls"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["Gabe Berke-Williams <gabebw@gabebw.com>"]
-edition = "2018"
+edition = "2021"
+license = "MIT"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-dirs = "2.0.2"
+dirs = "4.0.0"
 glob = "0.3.0"
-lz4 = "1.23.1"
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
+lz4 = "1.23.3"
+serde = { version = "1.0.136", features = ["derive"] }
+serde_json = "1.0.79"
